gateways/templates/network-policies.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: default-deny-ingress
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-gateway
spec:
  podSelector: {}
  ingress:
  - from:
    # CIDR block of Gateway
    - ipBlock:
        cidr: 172.16.0.0/26
  policyTypes:
  - Ingress
